--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <!--navbar-->
-    <nav id="home" class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav id="home" class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#home">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
 
       <!--jumbotron-->
       <div class="jumbotron jumbotron-fluid">
@@ -84,32 +84,32 @@
                 <img src="./images/woolorama.png" class="card-img-top" alt="jacob sheep">
                 <div class="card-body">
                   <h5 class="card-title">Wolorama (placeholder)</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://www.facebook.com/Woolorama.uk" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
+                  <a href="https://www.facebook.com/Woolorama.uk" class="btn btn-primary">facebook placeholder</a>
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
                 <img src="./images/thetrollhunters.png" class="card-img-top" alt="the troll hunters logo">
                 <div class="card-body">
                   <h5 class="card-title">The Troll Hunters (placeholder)</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://www.facebook.com/thetrollhunters" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
+                  <a href="https://www.facebook.com/thetrollhunters" class="btn btn-primary">facebook placeholder</a>
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
                 <img src="./images/snekkeren.png" class="card-img-top" alt="snekkeren logo">
                 <div class="card-body">
                   <h5 class="card-title">Snekkeren (placeholder)</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://www.facebook.com/SnekkerenWoodCraft" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
+                  <a href="https://www.facebook.com/SnekkerenWoodCraft" class="btn btn-primary">facebook placeholder</a>
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
                 <img src="./images/fiddletongue.jpg" class="card-img-top" alt="iona chadwick">
                 <div class="card-body">
                   <h5 class="card-title">Iona Chadwick (performer placeholder)</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://www.facebook.com/ionachadwick971" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
+                  <a href="https://www.facebook.com/ionachadwick971" class="btn btn-primary">facebook placeholder</a>
                 </div>
               </div>
             </div>
