added to css (navbar, jumbotron, skills)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse center" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#work">Work<span class="sr-only">(current)</span></a>
@@ -38,7 +38,7 @@
 
       <!--jumbotron-->
       <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class="hero-container">
           <h1 class="display-4">Iona Chadwick</h1>
           <p class="lead">Software development</p>
         </div>
@@ -49,25 +49,25 @@
         <section class="skills">
             <div class="row">
                   <div class="skills-card col-6 col-md-3">
-                    <img src="./images/html.png" class="card-img-top" alt="html">
+                    <img src="./images/html.png" class="skills-card-img-top" alt="html">
                     <div class="card-body">
                       <h5 class="card-title">HTML</h5>
                     </div>
                   </div>
                   <div class="skills-card col-6 col-md-3">
-                    <img src="images/css.jfif" class="card-img-top" alt="css">
+                    <img src="images/css.png" class="skills-card-img-top" alt="css">
                     <div class="card-body">
                       <h5 class="card-title">CSS</h5>
                     </div>
                   </div>
                   <div class="skills-card col-6 col-md-3">
-                    <img src="./images/bootstrap.jfif" class="card-img-top" alt="bootstrap">
+                    <img src="./images/bootstrap.jfif" class="skills-card-img-top" alt="bootstrap">
                     <div class="card-body">
                       <h5 class="card-title">Bootstrap</h5>
                     </div>
                   </div>
                   <div class="skills-card col-6 col-md-3">
-                    <img src="images/javascript.png" class="card-img-top" alt="javascript">
+                    <img src="images/javascript.png" class="skills-card-img-top" alt="javascript">
                     <div class="card-body">
                       <h5 class="card-title">JavaScript</h5>
                     </div>
