--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <!--skills-->
       <div class="container">
         <section class="skills">
+            <h2>Skills</h2>
             <div class="row">
                   <div class="skills-card col-6 col-md-3">
                     <img src="./images/html.png" class="skills-card-img-top" alt="html">
@@ -79,6 +80,7 @@
       <!--work-->
       <div class="container">
         <section id="work">
+            <h2>Previous Work</h2>
             <div class="row">
             <div class="work-card col=12 col-sm-6 col-md-3">
                 <img src="./images/woolorama.png" class="card-img-top" alt="jacob sheep">
