--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Wolorama (placeholder)</h5>
                   <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
-                  <a href="https://www.facebook.com/Woolorama.uk" class="btn btn-primary">facebook placeholder</a>
+                  <a href="https://www.facebook.com/Woolorama.uk" class="btn btn-primary fb">facebook placeholder</a>
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
@@ -95,7 +95,7 @@
                 <div class="card-body">
                   <h5 class="card-title">The Troll Hunters (placeholder)</h5>
                   <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
-                  <a href="https://www.facebook.com/thetrollhunters" class="btn btn-primary">facebook placeholder</a>
+                  <a href="https://www.facebook.com/thetrollhunters" class="btn btn-primary fb">facebook placeholder</a>
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
@@ -103,7 +103,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Snekkeren (placeholder)</h5>
                   <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
-                  <a href="https://www.facebook.com/SnekkerenWoodCraft" class="btn btn-primary">facebook placeholder</a>
+                  <a href="https://www.facebook.com/SnekkerenWoodCraft" class="btn btn-primary fb">facebook placeholder</a>
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
@@ -111,7 +111,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Iona Chadwick (performer placeholder)</h5>
                   <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
-                  <a href="https://www.facebook.com/ionachadwick971" class="btn btn-primary">facebook placeholder</a>
+                  <a href="https://www.facebook.com/ionachadwick971" class="btn btn-primary fb">facebook placeholder</a>
                 </div>
               </div>
             </div>
