almost finished css

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
             <h2>Previous Work</h2>
             <div class="row">
             <div class="work-card col=12 col-sm-6 col-md-3">
+                <div>                
                 <img src="./images/woolorama.png" class="card-img-top" alt="jacob sheep">
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Wolorama (placeholder)</h5>
                   <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
@@ -91,7 +93,9 @@
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
+                <div>
                 <img src="./images/thetrollhunters.png" class="card-img-top" alt="the troll hunters logo">
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">The Troll Hunters (placeholder)</h5>
                   <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
@@ -99,7 +103,9 @@
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
+                <div>
                 <img src="./images/snekkeren.png" class="card-img-top" alt="snekkeren logo">
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Snekkeren (placeholder)</h5>
                   <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
@@ -107,7 +113,9 @@
                 </div>
               </div>
               <div class="work-card col=12 col-sm-6 col-md-3">
+                <div>
                 <img src="./images/fiddletongue.jpg" class="card-img-top" alt="iona chadwick">
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Iona Chadwick (performer placeholder)</h5>
                   <p class="card-text">This is a family-adjacent business I will eventually develop a website for. In the meantime, the placeholder link will go to the facebook page.</p>
@@ -119,20 +127,22 @@
       </div>
 
       <!--about and work-->
-      <div class="container">
-        <section id="aboutme">
+      <div class="row aboutcontact">
+        <section class="col-7" id="aboutme">
             <h2>About Me</h2>
-            <p>Having spent most of my life in performing arts including music, circus, acting, and stunts, I have decided to persue a slightly more sedentary (although equally fulfilling) career in web development.
+            <p class="blurb">Having spent most of my life in performing arts including music, circus, acting, and stunts, I have decided to persue a slightly more sedentary (although equally fulfilling) career in web development.
                 <br>
                 I'm a Devon girl, born and bred, but have had a life-long love affair with Norway and hope to move back there again in the future.
             </p>
         </section>
-        <section id="contact">
+        <section class="col-5" id="contact">
             <h2>Contact Me</h2>
-            <a href="tel:+447898663346" target="_blank" id="phone">Phone</a>
-            <a href="mailto:ionachadwick97@gmail.com" target="_blank" id="email">Email</a>
-            <a href="https://github.com/ionachadwick97" target="_blank" id="github">GitHub</a>
-            <a href="https://instagram.com/ionachadwick971" target="_blank" id="insta">Instagram</a>
+            <div class="contactlinks">
+            <a class="contact" href="tel:+447898663346" target="_blank" id="phone">Phone</a>
+            <a class="contact" href="mailto:ionachadwick97@gmail.com" target="_blank" id="email">Email</a>
+            <a class="contact" href="https://github.com/ionachadwick97" target="_blank" id="github">GitHub</a>
+            <a class="contact" href="https://instagram.com/ionachadwick971" target="_blank" id="insta">Instagram</a>
+            </div>
         </section>
       </div>
 
