--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
 
       <!--about and work-->
-      <div class="row aboutcontact">
+      <div class="row about">
         <section class="col-7" id="aboutme">
             <h2>About Me</h2>
             <p class="blurb">Having spent most of my life in performing arts including music, circus, acting, and stunts, I have decided to persue a slightly more sedentary (although equally fulfilling) career in web development.
@@ -135,19 +135,18 @@
                 I'm a Devon girl, born and bred, but have had a life-long love affair with Norway and hope to move back there again in the future.
             </p>
         </section>
-        <section class="col-5" id="contact">
-            <h2>Contact Me</h2>
+        </div>
+
+      <!-- footer -->
+      <footer>
+          <h2>Contact Me</h2>
             <div class="contactlinks">
             <a class="contact" href="tel:+447898663346" target="_blank" id="phone">Phone</a>
             <a class="contact" href="mailto:ionachadwick97@gmail.com" target="_blank" id="email">Email</a>
             <a class="contact" href="https://github.com/ionachadwick97" target="_blank" id="github">GitHub</a>
             <a class="contact" href="https://instagram.com/ionachadwick971" target="_blank" id="insta">Instagram</a>
             </div>
-        </section>
-      </div>
-
-      <footer>
-        <p>Copyright Iona Chadwick 2022</p>
+            <p class="copy">Copyright Iona Chadwick 2022</p>
       </footer>
 
     <!--bootstrap-->
